--- a/scss/foundation/_settings.scss
+++ b/scss/foundation/_settings.scss
@@ -52,8 +52,8 @@
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
 // This is the default html and body font-size for the base rem value.
-$base-font-size: 16px;
-$rem-base: $base-font-size;
+// $base-font-size: 12px;
+// $rem-base: $base-font-size;
 
 // Allows the use of rem-calc() or lower-bound() in your settings
 @import 'foundation/functions';
@@ -121,10 +121,10 @@ $orange-light: #f3af9d;
 // We use these as default colors throughout
 $primary-color: #e8603c;
 // $secondary-color: #e7e7e7;
-// $alert-color: #f04124;
-// $success-color: #43AC6A;
-// $warning-color: #f08a24;
-// $info-color: #a0d3e8;
+$alert-color: #eb5439;
+$success-color: #98c601;
+$warning-color: #fab418;
+$info-color: #4d8fcb;
 
 // We use these to control various global styles
 // $body-bg: $white;
@@ -223,18 +223,18 @@ $header-top-margin: 0;
 // $header-text-rendering: optimizeLegibility;
 
 // We use these to control header font sizes
-$h1-font-size: rem-calc(44);
+$h1-font-size: rem-calc(24);
 $h2-font-size: rem-calc(18);
 $h3-font-size: rem-calc(16);
-// $h4-font-size: rem-calc(23);
-// $h5-font-size: rem-calc(18);
+$h4-font-size: rem-calc(15);
+$h5-font-size: rem-calc(14);
 // $h6-font-size: 1rem;
 
 // We use these to control header size reduction on small screens
-// $h1-font-reduction: rem-calc(10);
+$h1-font-reduction: rem-calc(4);
 $h2-font-reduction: 0;
 $h3-font-reduction: rem-calc(2);
-// $h4-font-reduction: rem-calc(5);
+$h4-font-reduction: rem-calc(1);
 // $h5-font-reduction: 0;
 // $h6-font-reduction: 0;
 
@@ -254,7 +254,7 @@ $h3-font-reduction: rem-calc(2);
 // $paragraph-font-weight: $font-weight-normal;
 $paragraph-font-size: rem-calc(12);
 $paragraph-line-height: 1.5;
-// $paragraph-margin-bottom: rem-calc(20);
+$paragraph-margin-bottom: rem-calc(18);
 // $paragraph-aside-font-size: rem-calc(14);
 // $paragraph-aside-line-height: 1.35;
 // $paragraph-aside-font-style: italic;
@@ -297,9 +297,9 @@ $paragraph-line-height: 1.5;
 // $definition-list-margin-bottom: rem-calc(12);
 
 // We use these to style blockquotes
-// $blockquote-font-color: scale-color($header-font-color, $lightness: 35%);
-// $blockquote-padding: rem-calc(9 20 0 19);
-// $blockquote-border: 1px solid $gainsboro;
+$blockquote-font-color: $body-font-color;
+$blockquote-padding: rem-calc(0 0 0 18);
+$blockquote-border: 8px solid $primary-color;
 // $blockquote-cite-font-size: rem-calc(13);
 // $blockquote-cite-font-color: scale-color($header-font-color, $lightness: 23%);
 // $blockquote-cite-link-color: $blockquote-cite-font-color;
@@ -353,14 +353,14 @@ $paragraph-line-height: 1.5;
 // $include-html-alert-classes: $include-html-classes;
 
 // We use this to control alert padding.
-// $alert-padding-top: rem-calc(14);
-// $alert-padding-default-float: $alert-padding-top;
-// $alert-padding-opposite-direction: $alert-padding-top + rem-calc(10);
-// $alert-padding-bottom: $alert-padding-top;
+$alert-padding-top: rem-calc(21);
+$alert-padding-default-float: rem-calc(16);
+$alert-padding-opposite-direction: rem-calc(16);
+$alert-padding-bottom: rem-calc(18);
 
 // We use these to control text style.
 // $alert-font-weight: $font-weight-normal;
-// $alert-font-size: rem-calc(13);
+$alert-font-size: rem-calc(14);
 // $alert-font-color: $white;
 // $alert-font-color-alt: scale-color($secondary-color, $lightness: -66%);
 
@@ -371,7 +371,7 @@ $paragraph-line-height: 1.5;
 // $alert-border-style: solid;
 // $alert-border-width: 1px;
 // $alert-border-color: scale-color($primary-color, $lightness: $alert-function-factor);
-// $alert-bottom-margin: rem-calc(20);
+$alert-bottom-margin: rem-calc(18);
 
 // We use these to style the close buttons
 // $alert-close-color: $oil;
@@ -918,11 +918,11 @@ $button-font-lrg: rem-calc(16);
 
 // We use these to control the caption styles
 // $orbit-container-bg: none;
-// $orbit-caption-bg: rgba(51,51,51, .8);
+$orbit-caption-bg: rgba($primary-color, .8);
 // $orbit-caption-font-color: $white;
-// $orbit-caption-font-size: rem-calc(14);
+$orbit-caption-font-size: rem-calc(12);
 // $orbit-caption-position: "bottom"; // Supported values: "bottom", "under"
-// $orbit-caption-padding: rem-calc(10 14);
+$orbit-caption-padding: rem-calc(22 20);
 // $orbit-caption-height: auto;
 
 // We use these to control the left/right nav styles
@@ -1432,8 +1432,8 @@ $topbar-link-bg-color-hover: none;
 $topbar-link-bg-active: none;
 $topbar-link-bg-active-hover: none;
 $topbar-link-font-family: $header-font-family;
-// $topbar-link-text-transform: none;
-$topbar-link-padding: 0;
+$topbar-link-text-transform: uppercase;
+$topbar-link-padding: rem-calc(14);
 // $topbar-back-link-size: rem-calc(18);
 // $topbar-link-dropdown-padding: rem-calc(20);
 // $topbar-button-font-size: .75rem;
