--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,45 +3,146 @@
 @import "fonts";
 
 body {
-	background: $white url("../img/bg-page.png");
+	background: url("../img/bg-page.jpg");
 }
-h2,h3 {word-spacing: 3px;}
+h2,h3 {
+	word-spacing: 3px;
+	text-transform: uppercase;
+}
+
+figure {
+	margin: 0 0 $column-gutter;
+}
+
+.alignleft,
+.alignright,
+.aligncenter {
+	margin-bottom: $paragraph-margin-bottom;
+	border:1px solid $iron;
+	padding:2px; 
+	background-color: $white;
+}
+.alignleft {
+	float: left;
+	margin-right: $column-gutter;
+	margin-top: 4px;
+}
+.alignright {
+	float: right;
+	margin-left: $column-gutter;
+	margin-top: 4px;
+}
+
+.firstletter:first-letter {
+	color:$primary-color;
+	font-weight: bold;
+	font-size: rem-calc(36);
+	float: left;
+	line-height: 1;
+	margin-right: 5px;
+}
+
+blockquote {
+	font-size: $paragraph-font-size;
+	font-style: italic;
+	margin-left:50px;
+}
+
+.alert-box {
+	text-align: center;
+	font-style: italic;
+	&.success {
+		border-color: $success-color;
+		background-color: #effeb9;
+		color: $success-color;
+	}
+	&.alert {
+		border-color: $alert-color;
+		background-color: #fbcbc1;
+		color: $alert-color;
+	} 
+	&.warning {
+		border-color: $warning-color;
+		background-color: #ffe9ad;
+		color: $warning-color;
+	} 
+	&.info {
+		border-color: $info-color;
+		background-color: #d1e4f3;
+		color: $info-color;
+	} 
+}
 
 .button {
 	padding:10px 15px 9px;
 }
 
-.top-bar .name h1 a {
-	color:$primary-color;
-	padding: 0;
-	span {color:$orange-light;}
-}
-.top-bar-section ul li {
-	margin-left: 28px;
-}
-
-.recent-box {
-	background:$white;
-	border:1px solid $gainsboro;
-	border-top: none;
-	background-color: $white;
-	
-}
-
-.text-columns {
-	margin-bottom: 27px;
-	h2 {
-		padding-left: 70px;
-		position: relative;
-		margin-bottom: 28px;
-		.icon {
-			position: absolute;
-			top: 0;
-			left: 0;
+.top-bar .name h1 {
+	padding:27px 0 15px;
+	line-height: 1em;
+	a {
+		color:$primary-color;
+		padding: 0;
+		span {
+			color:$orange-light;
+			line-height: inherit;
 		}
 	}
 }
-.section-title {
+.top-bar-section ul li:last-child {
+	margin-right: -$topbar-link-padding;
+}
+.top-bar-section li:not(.has-form) a:not(.button),
+.top-bar-section li.active:not(.has-form) a:not(.button) {
+	word-spacing: 2px;
+	@media #{$medium-up} {
+		line-height: 2rem;
+		padding-top:rem-calc(29px);
+		padding-bottom: rem-calc(17px);
+	}
+}
+.top-bar-section li.active:not(.has-form) a:not(.button) span {color: $orange-light;}
+
+.ba-wrapper {
+	position: relative;
+	overflow: hidden;
+}
+
+.ba-main-holder {
+	position: relative;
+	&:before,
+	&:after {
+		position: absolute;
+		height: 60px;
+		content:"";
+		background-color: rgba($primary-color, .5);
+		width: 9999px;
+		top: 0;
+	}
+	&:before {
+		right: 100%;
+	}
+	&:after {
+		left:100%;
+	}
+}
+
+
+.ba-text-columns {
+	.columns {margin-bottom: 27px;}
+	.ba-text-title {
+		padding-left: 70px;
+		position: relative;
+		margin-bottom: 28px;
+		&--icon {
+			position: absolute;
+			top: 0;
+			left: 0;
+			max-width:60px;
+		}
+	}
+}
+.ba-section-title {
 	overflow: hidden;
 	margin-bottom: 1em;
 	span {
@@ -61,12 +162,30 @@ h2,h3 {word-spacing: 3px;}
 	}
 }
 
-.portfolio {
+.ba-portfolio {
 	padding-bottom: 7px;
 	&__box {
 		margin-bottom: 21px;
 		@media (max-width:$small-breakpoint) {
 			margin-bottom: 0;
+		}
+	}
+	&__img {
+		position: relative;
+		display: block;
+		&:after {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			opacity:0;
+			transition: opacity .3s linear;
+			background: $black url(../img/icon-plus.svg) no-repeat 50%;
+			content:"";
+		}
+		&:hover:after {
+			opacity:.7;
 		}
 		img {
 			width: 100%;
@@ -80,31 +199,50 @@ h2,h3 {word-spacing: 3px;}
 		@media (max-width:$small-breakpoint) {
 			padding: 5px;
 		}
-		h3 {
+	}
+	&__name {
+		color: $smoke;
+		margin-bottom:-1px;
+		a {
 			color: $smoke;
-			margin-bottom:-6px;
-			@media (max-width:$small-breakpoint) {
-				margin-bottom: -2px;
-			}
+			&:hover {color: $primary-color;}
 		}
-		time {
+	}
+	&__date {
+		font-family: $header-font-family;
+		color:$primary-color;
+		font-size: 11px;
+	}
+	&__filter {
+		padding:10px 0 36px;
+		> li {margin: 0;}
+		a {
+			display: block;
+			padding:8px 12px 2px;
+			text-transform: uppercase;
 			font-family: $header-font-family;
-			color:$primary-color;
-			font-size: 11px;
+			font-size: rem-calc(14);
+			color:$smoke;
+			&:hover {color: $primary-color;}
+		}
+		.active a {
+			background-color: $primary-color;
+			color: $white;
 		}
 	}
 }
 
-.footer {
+.ba-footer {
 	position: relative;
 	overflow: hidden;
-	
-	.inner {
+
+	&__inner {
 		background-color: $primary-color;
 		color: $white;
 		padding:38px 34px 30px;
 		@media (max-width:$small-breakpoint) {
-			padding: 20px;
+			padding: 20px 20px 2px;
+			.columns {margin-bottom: 15px;}
 		}
 		&:before,
 		&:after {
@@ -135,18 +273,18 @@ h2,h3 {word-spacing: 3px;}
 		color: $orange-light;
 		&:hover {text-decoration: underline;}
 	}
-	.contact-link {color:$white;}
+	&__contact-link {color:$white;}
 }
 
-.tweet {
+.ba-tweet {
 	margin-bottom: 20px;
 	p {
 		margin-bottom: 0.4167em;
 	}
-	.time {color: $orange-light;}
+	&__time {color: $orange-light;}
 }
 
-.social-icons {
+.ba-social-icons {
 	margin-left: -5px;
 	padding-top: 4px;
 	li {
@@ -164,5 +302,80 @@ h2,h3 {word-spacing: 3px;}
 		&.rss {background-position: -105px 0;}
 		&.vimeo {background-position: -140px 0;}
 		&:hover {opacity:.9}
+	}
+}
+.ba-slider {
+	padding-bottom: 20px;
+	&__title {
+		color: $white;
+		margin-bottom: 1rem;
+	}
+	&__caption {
+		@media #{$medium-up} {
+			margin:30px 30px 32px 36px;
+			left: 0;
+			max-width:420px;
+			width:auto !important;
+		}
+		:last-child {margin-bottom: 0;}
+		p {line-height: 1.167;}
+	}
+	&__thumb {
+		display: block;
+		margin-bottom: 20px;
+		img {width: 100%;}
+	}
+	.orbit-slides-container {
+		margin-bottom: $column-gutter;
+	}
+}
+.orbit-container {
+	.orbit-prev,
+	.orbit-next {
+		width: 36px;
+		height: 52px;
+		top:50%;
+		margin-top: -54px;
+		&:hover {
+			background: none;
+			opacity:.8;
+		}
+		> span {display: none;}
+
+	}
+	.orbit-prev {
+		background: url(../img/arrow-prev.svg) no-repeat;
+		left: 5px;
+		@media #{$large-up} {
+			left:25px;
+		} 
+	}
+	.orbit-next {
+		background: url(../img/arrow-next.svg) no-repeat;
+		right: 5px;
+		@media #{$large-up} {
+			right: 25px;
+		} 
+	}
+}
+
+.ba-heading {
+	background: $primary-color;
+	padding:$column-gutter $column-gutter $column-gutter/2;
+	margin-bottom: 24px;
+	text-transform: uppercase;
+	h1 {
+		color:$white;
+		margin:-1px 0 0;
+	}
+}
+
+.ba-post {
+	padding-bottom: 26px;
+}
+.ba-content {
+	padding-bottom: $column-gutter;
+	@media #{$large-up} {
+		padding-right: 30px;
 	}
 }
